Fix alignments of weight slider and check boxes

--- a/path_finding/static/styles.css
+++ b/path_finding/static/styles.css
@@ -229,3 +229,13 @@
 #innerWeightSlider .slider-handle {
     background: black;
 }
+
+.big-checkbox {
+    width: 18px;
+    height: 18px;
+}
+
+#diagMovesToggle {
+    display: table-row;
+    width: 100%;
+}
